# pokemon

./: Cargo.toml
src/: base_stats.rs  battle.rs  cpm.rs  evolution.rs  index.rs  main.rs  moves.rs  pokemon.rs  pokemon_info.rs  pokemon_lv.rs  pokepedia.rs  ranking.rs  types.rs  utils.rs
